--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,2 +1,11 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+EXPOSE 8080
+RUN sed -i 's/LISTEN 80/LISTEN 8080/g' /etc/httpd/conf/httpd.conf
+LABEL io.k8s.display-name="httpd server" \
+      io.k8s.description="httpd server" \
+      io.openshift.expose-services="8080:http" \
+      io.openshift.tags="apache, httpd"
+RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
+    chmod -R g=u /var/log/httpd /var/run/httpd  
+USER 1001
