--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,7 +1,7 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
 EXPOSE 8080
-RUN sed -i 's/LISTEN 80/LISTEN 8080/g' /etc/httpd/conf/httpd.conf
+RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf
 LABEL io.k8s.display-name="httpd server" \
       io.k8s.description="httpd server" \
       io.openshift.expose-services="8080:http" \
